--- a/layer2tea/package.json
+++ b/layer2tea/package.json
@@ -1,7 +1,7 @@
 {
   "name": "layer2tea",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.1.2",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "teaboot": "^1.1.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
-  }
+    "typescript": "^5"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/0xosbjorn/layer"
+  },
+  "keywords": [
+    "layer2"
+  ],
+  "author": "0xosbjorn",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/0xosbjorn/layer/issues"
+  },
+  "homepage": "https://github.com/0xosbjorn/layer#readme"
 }
